# Scheduler

./: Capstone-Scheduling-Models-v4.ipynb  Capstone-Scheduling-Models-v5.ipynb  Capstone-TaktTime-Predictionv5-R2.ipynb  Capstone-TaktTime-Predictionv5-R2s.ipynb  PIC_skills_edited.xlsx  Untitled-1.ipynb  Untitled-2.ipynb  catboost_model.cbm  catboost_modelV2.cbm  data1.csv  default_takt.xlsx  dfINTERNALREV.xlsx  dfexpe.xlsx  main.py  post_main.py  project_summary.csv  project_summary2.csv  pyproject copy.toml  pyproject.toml  requirements.txt  sample.csv  sample_schedule.xlsx  sample_scheduleSS.xlsx  schedule_ga_results.xlsx  schedule_greedy_results.xlsx  schedule_human_results.xlsx  schedule_mcts_results.xlsx  schedule_ql_results.xlsx  schedule_with_dates.csv  smartsheet_writer.py  task-dataset-B.xlsx  task-dataset-bv2.xlsx  ttime.csv  unique_tasks.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.a0559b93-d95f1f93-34fe6756-647ebd33.tmp
models/: CatBoost_20250518_200129.pkl
