[project]
name = "capstone-model-and-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost==1.2.8",
    "jupyter==1.1.1",
    "lightgbm==4.1.0",
    "matplotlib==3.8.4",       
    "numpy==1.26.4",           
    "openpyxl==3.1.2",
    "optuna==3.5.0",           
    "pandas==2.2.1",
    "scikit-learn==1.3.2",     
    "seaborn==0.13.2",
    "shap==0.42.1",           
    "smartsheet-python-sdk==3.0.5",
    "torch==2.1.2"             
]

