[project]
name = "capstone-model-and-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [     
    "numpy==1.26.4",           
    "openpyxl==3.1.2",         
    "pandas==2.2.1",      
    "smartsheet-python-sdk==3.0.5"            
]

